# datalakehouse_lowcost

./: .gitignore  README.md  leia-me  pyproject.toml
.github/workflows/: python-app.yml
elt/: loader.py  start.py  transformer.py
elt/convertion/: sianet_convertion.py
elt/extractor/: base.py  csv_extractor.py  sianet_contracts.py  sianet_extractor.py
elt/loading/: gcp_connector.py
elt/tmp/: dna_kmRodado_20240104.parquet
elt/transformer/: sianet_transformer.py
elt/transmission/dimension/: dim_calendar.parquet  dim_carro.parquet  dim_horario.parquet  dim_linha.parquet
notebooks/: eda.ipynb
tests/: test_csv_extractor.py  test_sianet_convertion.py  test_sianet_extractor.py  test_sianet_loader.py  test_sianet_transform.py  test_sianet_transforming.py  test_transform.py
tmp/: test_dna_20240104.parquet
